--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,7 +14,7 @@ binding = "R2"
 bucket_name = "twikoo"
 
 [vars]
-R2_PUBLIC_URL = "twikoo.yogurts.top"
+R2_PUBLIC_URL = "twikoo.r2.yogurts.top"
 
 [dev]
 port = 5000
